fix width overflow in blog posts

--- a/app/assets/stylesheets/blog.sass
+++ b/app/assets/stylesheets/blog.sass
@@ -11,6 +11,7 @@
         width: 60px
 .blog
   width: 585px
+  overflow: auto
   .post
     clear: both
     margin-bottom: 50px
